[package]
name = "spelling_bee_solver"
version = "0.1.0"
authors = ["Rachel Brindle <rachel@rachelbrindle.com>"]
license = "MIT"
description = "A CLI app to generate solutions to the NYT Spelling Bee puzzles"
readme = "README.md"
homepage = "https://github.com/younata/SpellingBeeSolver"
repository = "https://github.com/younata/SpellingBeeSolver"
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "^0.2"
